Small addition to page content.

--- a/site2/index.html
+++ b/site2/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Dirty Fuckers</title>
 </head>
 <body>
-<h1>Hello Dirty Fuckers</h1>
+<h1>Hello Dirty Fuckers! Great Course.</h1>
 </body>
 </html>
